--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,6 +58,14 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
   {% endif %}
 
+
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+<link rel="manifest" href="/assets/img/site.webmanifest">
+<link rel="shortcut icon" href="/assets/img/favicon.ico">
+
+  
   {% include gtag.html %}
   {% include gtm_head.html %}
   {% include google_analytics.html %}
