--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       {% include social-networks-links.html %}
       {% if page.footer-extra %}
         <div class="footer-custom-content">
+          This is a parody website unconnected with any other website or organisation and is intended for humour only.
           {% for file in page.footer-extra %}
             {% include {{ file }} %}
           {% endfor %}
