--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,13 +23,16 @@
           <a href="{% if site.url-canonical %}{{ site.url-canonical }}{% else %}{{ '/' | absolute_url }}{% endif %}">{{ site.url-pretty }}</a>
         </span>
       {% endif %}
-    This is a parody website unconnected with any other website or organisation and is intended for humour only.
+    
       {% if site.matomo %}
         {% if site.matomo.opt-out %}
           &nbsp;&bull;&nbsp;
           <a href="http://{{- site.matomo.uri -}}/index.php?module=CoreAdminHome&action=optOut" target="_blank" class="text_muted">Do-not-Track</a>
         {% endif %}
       {% endif%}
+      </p>
+      <p class="copyright text-muted">
+      This is a parody website unconnected with any other website or organisation and is intended for humour only.
       </p>
       </div>
     </div>
